--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ server.port=8888
 spring.cloud.config.server.git.uri=https://github.com/shoaib-ahmed16/elevatemart-application-properties
 spring.cloud.config.server.git.clone-on-start=true
 spring.cloud.config.server.git.search-paths={application}
+spring.cloud.config.server.git.default-label=main
+
 
 logging.level.org.springframework.cloud=debug
 logging.level.org.springframework.web=debug
